Muestra de forma correcta la lista de los logeos de los profesores y alumnos

--- a/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
@@ -61,6 +61,12 @@
                                     <f:param value="#{profesorGrupoAlumnoModelo.id}" name="profesor"/>
                                 </h:link>
                             </li>
+                            <li>
+                                <h:link outcome="login">
+                                    <span>login</span>
+                                    <f:param value="#{profesorGrupoAlumnoModelo.id}" name="profesor"/>
+                                </h:link>
+                            </li>
                             <li><a href="#">bloquear</a></li>
                         </ul>
                     </h:panelGroup>
