puedes recargar varias veces el boton de actualizar en la vista de rango de fechas

--- a/tecolotl-web/src/main/webapp/coordinador/reporte-sesion.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/reporte-sesion.xhtml
@@ -17,7 +17,7 @@
         <h:outputStylesheet library="css" name="/coordinador/template-coordinador.css"/>
         <h:outputStylesheet library="css" name="datepicker.css"/>
         <div id="rango-fecha">
-            <h:form>
+            <h:form id="formulario-fechas">
                 <h:inputText styleClass="uk-input" value="#{reporteSesionControlador.fechaInicio}">
                     <f:convertDateTime pattern="dd/MM/yyyy"/>
                 </h:inputText>
