se modifico mensajes en el ingreso y la landing

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -43,10 +43,10 @@
 		</ul>
 	</aside>
 	<div id="mobil-aside">
-		<p><h:link  outcome="/profesor/dashboard.xhtml" value="Login Teachers"/></p>
-		<p><h:link  outcome="/alumno/dashboard.xhtml" value="Login Students"/></p>
-		<p><h:link  outcome="/administracion/dashboard.xhtml" value="Login Administration"/></p>
-		<p><h:link outcome="/coordinador/dashboard.xhtml" value="Login Coordinador"/> </p>
+		<p><h:link  outcome="/profesor/dashboard.xhtml" value="Teachers"/></p>
+		<p><h:link  outcome="/alumno/dashboard.xhtml" value="Students"/></p>
+		<p><h:link  outcome="/administracion/dashboard.xhtml" value="Administration"/></p>
+		<p><h:link outcome="/coordinador/dashboard.xhtml" value="Coordinador"/> </p>
 	</div>
 	<div id="contenido">
 		<div id="inicio">
@@ -55,13 +55,13 @@
 					<span>squadron</span>
 					<ul>
 						<li>
-							<h:link  outcome="/profesor/dashboard.xhtml" value="Login Teachers"/>
+							<h:link  outcome="/profesor/dashboard.xhtml" value="Teachers"/>
 						</li>
 						<li>
-							<h:link  outcome="/alumno/dashboard.xhtml" value="Login Students"/>
+							<h:link  outcome="/alumno/dashboard.xhtml" value="Students"/>
 						</li>
-						<li><h:link  outcome="/administracion/dashboard.xhtml" value="Login Administration"/></li>
-						<li><h:link outcome="/coordinador/dashboard.xhtml" value="Login Coordinador"/></li>
+						<li><h:link  outcome="/administracion/dashboard.xhtml" value="Administration"/></li>
+						<li><h:link outcome="/coordinador/dashboard.xhtml" value="Coordinador"/></li>
 					</ul>
 					<div>
 						<span><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/squadron.svg"  alt=""/>squadron</span>
