--- a/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
@@ -64,7 +64,6 @@
                                 <div class="uk-width-1-1@s">
                                     <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">#{profesor['evaluate.developandshare.nickname']} : </span>#{profesorControlador.profesorModelo.apodo}</p>
                                     <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">#{profesor['evaluate.developandshare.mail']}: </span>#{profesorControlador.profesorModelo.correoEletronico}</p>
-<!--                                    <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-primary">Edit Profile: </span></p>-->
                                 </div>
                             </div>
                         </div>
@@ -117,7 +116,11 @@
                 <h:commandButton value="#{boton['evaluate']}"
                                  styleClass="boton-escuadron-base"
                                  rendered="#{empty calificaMapaMentalControlador.calificaTareaMapaMentalModelo.puntaje}"
-                                 action="#{calificaMapaMentalControlador.califica}" onclick="return validaComentario()"/>
+                                 action="#{calificaMapaMentalControlador.califica}" onclick="return validaComentario()">
+                    <f:param name="idTarea" value="${param['idTarea']}"/>
+                    <f:param name="cardinalidad" value="${param['cardinalidad']}"/>
+                    <f:param name="intento" value="${param['intento']}"/>
+                </h:commandButton>
             </h:form>
         </h:panelGroup>
         <script type="application/javascript">
