--- a/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
@@ -56,6 +56,7 @@
                             <li>
                                 <h:commandLink>
                                     <span>#{etiqueta['detail']}</span>
+                                    <f:ajax listener="#{detalleProfesorControlador.buscaAlumno(calificacionPendientesModelo.idGrupo)}"/>
                                 </h:commandLink>
                             </li>
                             <li>
