se agregan enlaces archivos storage

--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/order-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/order-free-library.xhtml
@@ -114,7 +114,7 @@
         </div>
 
         <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/order-free-library.js" ></script>
-        <h:outputScript library="js" name="/alumno/order-free-library.js"/>
+        <ui:remove><h:outputScript library="js" name="/alumno/order-free-library.js"/></ui:remove>
     </ui:define>
 </ui:composition>
 </html>
