--- a/tecolotl-web/src/main/webapp/profesor/buzon.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/buzon.xhtml
@@ -26,7 +26,8 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="/profesor/buzon.css"/>
+        <ui:remove><h:outputStylesheet library="css" name="/profesor/buzon.css"/></ui:remove>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/buzon.css"/>
         <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron uk-text-capitalize">#{profesor['mail.box']}</h1></div>
         <div class="uk-grid" uk-grid="">
             <div class="uk-width-1-3@m">
