--- a/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
@@ -111,8 +111,8 @@
            let excelente = "#{profesor['excellent']}";
            const termina = "#{profesor['msj.termina']}";
         </script>
-<!--        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/gramatica.js"></script>-->
-        <h:outputScript library="js" name="/profesor/gramatica.js"/>
+        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/gramatica.js"></script>
+       <ui:remove> <h:outputScript library="js" name="/profesor/gramatica.js"/></ui:remove>
     </ui:define>
 </ui:composition>
 </html>
